main/app-manifests/carts.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: retail-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: carts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      serviceAccountName: carts
      containers:
        - name: carts
          image: "public.ecr.aws/aws-containers/retail-store-sample-cart:1.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
