main/app-manifests/catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: retail-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      serviceAccountName: catalog
      containers:
        - name: catalog
          image: "public.ecr.aws/aws-containers/retail-store-sample-catalog:1.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
