main/app-manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: ui
      containers:
        - name: ui
          image: "public.ecr.aws/aws-containers/retail-store-sample-ui:1.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
