main/app-manifests/orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      serviceAccountName: orders
      containers:
        - name: orders
          image: "public.ecr.aws/aws-containers/retail-store-sample-orders:1.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-rabbitmq
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-rabbitmq
  template:
    metadata:
      labels:
        app: orders-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: "public.ecr.aws/docker/library/rabbitmq:3-management"
          imagePullPolicy: IfNotPresent
          ports:
            - name: amqp
              containerPort: 5672
            - name: http
              containerPort: 15672
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-rabbitmq
  namespace: retail-app
spec:
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: http
  selector:
    app: orders-rabbitmq
